repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__legacy_redirects__metapackage_packages.snap
---
source: repology-webapp/tests/snapshot_tests/legacy_redirects.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 301
Header: location: /project/zsh/packages
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: content-length: 0
---
