repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__legacy_redirects__version_only_for_repo_with_title.snap
---
source: repology-webapp/tests/snapshot_tests/legacy_redirects.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 301
Header: location: /badge/version-for-repo/foo/bar.svg?header=baz
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 0
---
